[package]
name = "dirt"
version = "0.1.0"
edition = "2021"
default-run = "spheres"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.32"
rand = "0.8"
itertools = "0.10"

[dev-dependencies]
test-case = "2.2.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
